footer gap fix

--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -7,10 +7,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 5px;
+  gap: 14px;
 
   @include desktop {
     font-size: 15px;
+    gap: 17px;
   }
 
   &:hover {
